--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
        <div class="titulo">
     	<h2>Centro de dados</h2>
       <br>
-    	<p> A implementação do data center de TI leva em conta planos detalhados de implementação técnica e de fornecimento – desenvolvidos pela Tech World – e acompanha esses planos até a implementação completa.</p>
+    	<p> A implementação do data center de TI leva em conta planos detalhados de implementação técnica e de fornecimento – desenvolvidos pela MBTech – e acompanha esses planos até a implementação completa.</p>
     </div>
     </div>
 
@@ -107,7 +107,7 @@
       <div class="titulo">
       <h2>INFRAESTRUTURA DE TI</h2>
       <br>
-      <p> O serviço de implementação de infraestrutura da Tech World transforma as recomendações para mudanças técnicas em verdadeiros benefícios comerciais. O ponto central deste serviço é a instalação de nova infraestrutura, o início de serviços de infraestrutura tecnológica aprimorados e a entrega de desempenho subsequente.</p>
+      <p> O serviço de implementação de infraestrutura da MBTech transforma as recomendações para mudanças técnicas em verdadeiros benefícios comerciais. O ponto central deste serviço é a instalação de nova infraestrutura, o início de serviços de infraestrutura tecnológica aprimorados e a entrega de desempenho subsequente.</p>
     </div>
     </div>
 
@@ -117,7 +117,7 @@
       <div class="titulo">
       <h2> DESIGNER DE WEB</h2>
       <br>
-      <p> A Tech World oferece serviços completos de desenvolvimento web. Começando pela criação de um design inicial para você ou de acordo com seus esforços de marketing atuais. Digitalizamos seus logotipos e gráficos e os convertemos em imagens elegantes e de carregamento rápido que impressionarão seus clientes em potencial.</p>
+      <p> A MBTech oferece serviços completos de desenvolvimento web. Começando pela criação de um design inicial para você ou de acordo com seus esforços de marketing atuais. Digitalizamos seus logotipos e gráficos e os convertemos em imagens elegantes e de carregamento rápido que impressionarão seus clientes em potencial.</p>
     </div>
     </div>
   
@@ -128,7 +128,7 @@
       <div class="titulo">
       <h2>Desenvolvimento de software</h2>
       <br>
-      <p> Se você está procurando serviços de desenvolvimento de software, a TechWorld pode ajudá-lo a criar produtos inovadores e envolventes, ao mesmo tempo que garante um rápido lançamento no mercado.</p>
+      <p> Se você está procurando serviços de desenvolvimento de software, a MBTech pode ajudá-lo a criar produtos inovadores e envolventes, ao mesmo tempo que garante um rápido lançamento no mercado.</p>
     </div>
     </div>
   </div>
