--- a/Cadastro.html
+++ b/Cadastro.html
@@ -59,7 +59,7 @@
                       var visitCount = getVisitCount();
                       visitCount++;
                       document.cookie = "visitCount=" + visitCount + "; expires=" + new Date(new Date().getTime() + 7 * 24 * 60 * 60 * 1000).toUTCString();
-                      document.getElementById('visitCount').innerText = "Você é o visitante número " + visitCount;
+                      document.getElementById('visitCount').innerText = "Você é o usuário " + visitCount;
                     }
                 
                     window.onload = function () {
